# routes/index.js
@@ -1,19 +1,60 @@
 const router = require('express').Router();
+const passport = require('passport');
+const { isAuthenticated } = require('../middleware/authenticate');
 
-router.use('/',  
-    //#swagger.tags=['Default']
-    require('./swagger.js'));
+router.use('/',
+  //#swagger.tags=['Default']
+  require('./swagger.js')
+);
 
-router.get('/', 
-    //#swagger.tags=['Default']
-    (req, res) => {res.send('Hi there, use the /api-docs route')});
+router.get('/',
+  //#swagger.tags=['Default']
+  (req, res) => {
+    res.send('Hi there, use the /api-docs route');
+  }
+);
 
-router.use('/books', 
-    //#swagger.tags=['Books']
-    require('./books.js'));
+router.use('/auth',
+  //#swagger.tags=['Auth']
+  require('./auth.js')
+);
 
-router.use('/reviews', 
-    //#swagger.tags=['Reviews']
-    require('./reviews.js'));
+router.get('/github/login',
+  //#swagger.tags=['GitHub Auth']
+  passport.authenticate('github')
+);
 
-module.exports = router; 
+router.get('/github/callback',
+  //#swagger.tags=['GitHub Auth']
+  passport.authenticate('github', { failureRedirect: '/' }),
+  (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+  }
+);
+
+router.get('/logout',
+  //#swagger.tags=['GitHub Auth']
+  (req, res, next) => {
+    req.logout(function (err) {
+      if (err) return next(err);
+      req.session.destroy(() => {
+        res.redirect('/');
+      });
+    });
+  }
+);
+
+router.use('/books',
+  //#swagger.tags=['Books']
+  isAuthenticated,
+  require('./books.js')
+);
+
+router.use('/reviews',
+  //#swagger.tags=['Reviews']
+  isAuthenticated,
+  require('./reviews.js')
+);
+
+module.exports = router;
